src/components/AboutMe/styles/index.module.css
.container {
  max-width: 400px;
  margin: 86px auto 0 auto;
  padding: 0 36px;
}

.me {
  display: block;
  border-radius: 50%;
  margin: auto;
}

.hello {
  color: var(--text-color-primary);
  font-size: 40px;
  font-weight: bold;
  text-align: center;
}

.introduction {
  font-size: 16px;
  line-height: 28px;
}

